# edkit-agent

./: .gitignore  LICENSE  Makefile  Makefile.am  README  README.md  autogen.sh  configure  configure.ac
client/html/edleak/: index.html
client/html/edleak/lib/: calleradder.js  eleakgraph.js  fileloader.js  main.js  wsloader.js
client/html/edleak/source/: calleradder.js  eleakgraph.js  main.js  wsloader.js
client/html/edleak/style/: default.css
client/html/style/: default.css
client/python/edleak/: api.py  asset.py  leak_factor.py  plot.py  slice_runner.py
client/python/examples/: edleak1.py  edleak_autodetect.py
client/python/rpc/: rpc.py  ws.py
include/edkit/toolbox/: CallStack.h  DlList.h  DynEntry.h  DynObject.h  Httpd.h  HttpdRequest.h  HttpdSingleton.h  JsonFlattener.h  OakString.h  Thread.h  UrlHandler.h  WsHandlerSingleton.h  WsInterface.h  WsMethod.h  rtsym.h  rtsym.h.in
m4/: mangle-symbol.m4
src/edleak/: Component.mk  ContextCallStackList.cpp  ContextCallStackList.h  Controllers.cpp  Controllers.h  ExeContext.cpp  ExeContext.h  FileWriter.cpp  FileWriter.h  HeapEntry.h  Makefile  Makefile.am  MemAlignProbe.cpp  MemAlignProbe.h  MemAllocProbe.cpp  MemAllocProbe.h  MemCallocProbe.cpp  MemCallocProbe.h  MemFreeProbe.cpp  MemFreeProbe.h  MemHeap.cpp  MemHeap.h  MemProbe.cpp  MemProbe.h  MemReallocProbe.cpp  MemReallocProbe.h  PosixSymbol.cpp  PosixSymbol.h  flags.make  libedleak-controller.la  libedleak-heap.la  libedleak-preload.la  libedleak-probe.la  libedleak.la  preload_alloc.cpp
src/edleak/controller/: Component.mk  ContextUtils.cpp  ContextUtils.h  Controllers.cpp  Controllers.h  FileWriter.cpp  FileWriter.h  WebService.cpp  WebService.h  WsMethodSlice.cpp  WsMethodSlice.h  WsMethodStackWatchAdd.cpp  WsMethodStackWatchAdd.h
src/edleak/controller/src/: Controllers.cpp  FileWriter.h  WebService.cpp  WsMethodStackWatchAdd.cpp
src/edleak/heap/: Component.mk  ContextCallStackList.h  ExeContext.cpp  HeapEntry.h  MemHeap.cpp
src/edleak/heap/include/: ExeContext.h  MemHeap.h
src/edleak/heap/src/: ContextCallStackList.cpp
src/edleak/preload/: Component.mk  Glib.cpp  Posix.cpp
src/edleak/preload/src/: Posix.cpp
src/edleak/probe/: Component.mk  MemAlignProbe.cpp  MemAlignProbe.h  MemAllocProbe.cpp  MemAllocProbe.h  MemCallocProbe.cpp  MemCallocProbe.h  MemFreeProbe.cpp  MemFreeProbe.h  MemProbe.h  MemReallocProbe.cpp  MemReallocProbe.h  PosixMemAlignProbe.cpp  PosixMemAlignProbe.h  SliceAllocProbe.h
src/edleak/probe/glib/: SliceAllocProbe.cpp
src/edleak/probe/include/: Probe.h  SliceFreeProbe.h
src/edleak/probe/src/: MemAlignProbe.cpp  MemCallocProbe.cpp  Probe.cpp
src/edleak/probe/src/glib/: SliceFreeProbe.cpp
src/toolbox/: Component.mk  Makefile  Makefile.am  OakString.cpp  String.cpp  flags.make  libedkit-toolbox.la
src/toolbox/DynObject/: DynObject.cpp  JsonFlattener.cpp
src/toolbox/Http/: Httpd.cpp  HttpdRequest.cpp  HttpdSingleton.cpp  UrlHandler.cpp  WsHandler.cpp  WsHandlerSingleton.cpp  WsInterface.cpp  WsMethod.cpp
src/toolbox/Http/mongoose/: mongoose.c
src/toolbox/Os/: CallStack.cpp  Thread.cpp  rtsym.c
src/toolbox/Preload/: DlList.cpp
src/toolbox/include/: AList.h  CallStack.h  DlList.h  DynEntry.h  DynObject.h  Httpd.h  HttpdSingleton.h  JsonFlattener.h  ListIterator.h  String.h  Thread.h  UrlHandler.h  WsHandler.h  WsInterface.h  WsMethod.h  rtsym.h
src/toolbox/src/Http/: HttpdRequest.cpp  WsMethod.cpp
src/toolbox/src/Http/mongoose/: mongoose.c
src/toolbox/src/Os/: CallStack.cpp
src/toolbox/src/Preload/: DlList.cpp
test/client/python/: edkit_utest.py
test/client/python/test/edleak/: test_asset.py  test_leak_factor.py
test/edleak/: Component.mk  FakeAlloc.cpp  FakeAlloc.h  Makefile  Makefile.am  MemAlign1.cpp  MemAlign1.h  TestExeContext.cpp  TestMemAlloc.cpp  TestMemAlloc.h
test/edleak/calloc1/: Component.mk  Makefile  main.c
test/edleak/glib/: TestSliceAllocProbe.cpp  TestSliceFreeProbe.cpp
test/edleak/malloc1/: Makefile
test/edleak/mock/: rtsym.cpp
test/edleak/new1_nothrow/: Makefile  main.cpp
test/edleak/new2_throw/: Makefile  main.cpp
test/edleak/realloc1/: Makefile
test/edleak/realloc2_null/: Makefile
test/edleak_func/calloc1/: Component.mk
test/edleak_func/malloc1/: Component.mk  main.c
test/edleak_func/new1_nothrow/: Component.mk
test/edleak_func/new2_throw/: Component.mk
test/edleak_func/realloc1/: Component.mk  main.c
test/edleak_func/realloc2_null/: Component.mk  main.c
test/leaker/: Component.mk  leaker  main.cpp
test/toolbox/: AList1.cpp  AList1.h  AListIterator1.cpp  AListIterator1.h  CallStack.cpp  Component.mk  DynObject1.cpp  DynObject1.h  HttpdRequest1.cpp  HttpdRequest1.h  HttpdSingleton.cpp  JsonFlattener1.cpp  JsonFlattener1.h  Makefile  Makefile.am  String1.cpp  String1.h  flags.make  main.cpp
tools/leaker/: Makefile.am  main.cpp
